--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -4,8 +4,8 @@ phases:
     commands:
       - echo Logging in to Amazon ECR....
       - aws --version
-      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 537124981913.dkr.ecr.us-east-1.amazonaws.com
-      - REPOSITORY_URI=537124981913.dkr.ecr.us-east-1.amazonaws.com/3pounds-frontend
+      - aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin 537124981913.dkr.ecr.us-west-2.amazonaws.com
+      - REPOSITORY_URI=537124981913.dkr.ecr.us-west-2.amazonaws.com/3pounds-frontend
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
   build:
     commands:
